syntax = "proto3";

package solid.oidc.v1;

import "google/protobuf/wrappers.proto";

enum ErrorCode {
  ERROR_CODE_INVALID = 0;
  ERROR_CODE_UNKNOWN = 1;
  // The Authorization Server requires End-User interaction of some form to
  // proceed. This error MAY be returned when the prompt parameter value in the
  // Authentication Request is none, but the Authentication Request cannot be
  // completed without displaying a user interface for End-User interaction.
  ERROR_CODE_INTERACTION_REQUIRED = 2;
  // The Authorization Server requires End-User authentication. This error MAY
  // be returned when the prompt parameter value in the Authentication Request
  // is none, but the Authentication Request cannot be completed without
  // displaying a user interface for End-User authentication.
  ERROR_CODE_LOGIN_REQUIRED = 3;
  // The End-User is REQUIRED to select a session at the Authorization Server.
  // The End-User MAY be authenticated at the Authorization Server with
  // different associated accounts, but the End-User did not select a session.
  // This error MAY be returned when the prompt parameter value in the
  // Authentication Request is none, but the Authentication Request cannot be
  // completed without displaying a user interface to prompt for a session to
  // use.
  ERROR_CODE_ACCOUNT_SELECTION_REQUIRED = 4;
  // The Authorization Server requires End-User consent. This error MAY be
  // returned when the prompt parameter value in the Authentication Request is
  // none, but the Authentication Request cannot be completed without displaying
  // a user interface for End-User consent.
  ERROR_CODE_CONSENT_REQUIRED = 5;
  // The request_uri in the Authorization Request returns an error or contains
  // invalid data.
  ERROR_CODE_INVALID_REQUEST_URI = 6;
  // The request parameter contains an invalid Request Object.
  ERROR_CODE_INVALID_REQUEST_OBJECT = 7;
  // The OP does not support use of the request parameter defined in Section 6.
  ERROR_CODE_REQUEST_NOT_SUPPORTED = 8;
  // The OP does not support use of the request_uri parameter defined in
  // Section 6.
  ERROR_CODE_REQUEST_URI_NOT_SUPPORTED = 9;
  // The OP does not support use of the registration parameter defined in
  // Section 7.2.1.
  ERROR_CODE_REGISTRATION_NOT_SUPPORTED = 10;
}

message Error {
  // REQUIRED. Error code.
  ErrorCode err = 1;
  // OPTIONAL. Human-readable ASCII encoded text description of the error.
  google.protobuf.StringValue error_description = 2;
  // OPTIONAL. URI of a web page that includes additional information about the
  // error.
  google.protobuf.StringValue error_uri = 3;
  // OAuth 2.0 state value. REQUIRED if the Authorization Request included the
  // state parameter. Set to the value received from the Client.
  google.protobuf.StringValue state = 4;
}
